# generic-cor

./: CMakeLists.txt  EmailHandler.cpp  EmailHandler.hpp  FormHandler.cpp  FormHandler.hpp  FormInput.cpp  FormInput.hpp  Handler.cpp  Handler.hpp  HundredHandler.hpp  OneRandHandler.hpp  TextHandler.cpp  TwentyHandler.hpp  formHandlerMain.cpp  main.cpp
form_cor/: EmailHandler.cpp  NumberHandler.cpp  NumberHandler.hpp  TextHandler.cpp  TextHandler.hpp
